--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,10 @@
 :root {
+  --bg-color: #081b29;
+  --second-bg-color: #112e42;
+  --third-bg-color: #08FF2E;
+  --text-color: #ededed;
+  --main-color: #00abf0;
+  
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
@@ -49,31 +55,25 @@
   }
 }
 
-body {
+*{
   margin: 0;
   padding: 0;
-  /* color: var(--color-text); */
-  /* background: var(--color-background); */
-  background-color: #0D1B1E;
+  box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-    /* Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif; */
+  text-decoration: none;
+  border: none;
+  outline: none;
+  scroll-behavior: smooth;
+}
+
+html{
+  overflow-x: hidden;
+}
+
+body {
+  background: var(--bg-color);
+  color: var(--text-color);
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url("https://images2.alphacoders.com/133/1330770.png") no-repeat;
-  background-position: center;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
 }
