--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -3,7 +3,7 @@
   --second-bg-color: #112e42;
   --text-color: #ededed;
   --main-color: #00abf0;
-  
+
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
@@ -54,18 +54,18 @@
   }
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   text-decoration: none;
   border: none;
   outline: none;
   scroll-behavior: smooth;
 }
 
-html{
+html {
   overflow-x: hidden;
 }
 
@@ -86,7 +86,7 @@ span {
   color: var(--main-color);
 }
 
-.heading{
+.heading {
   font-size: 5rem;
   margin-bottom: 3rem;
   text-align: center;
@@ -168,4 +168,10 @@ span {
   color: #77efff;
   transform: translate(8px, 8px);
   -webkit-text-stroke: 0.7px black;
+}
+
+@media (max-width: 992px) {
+  section {
+    padding: 10rem 4% 2rem;
+  }
 }
