--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -106,7 +106,7 @@ span {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  max-width: 20rem;
+  width: 20rem;
   background-color: var(--main-color);
   border: 0.2rem solid var(--main-color);
   border-radius: 0.8rem;
@@ -235,6 +235,7 @@ span {
 
   .btn-box .btn{
     font-size: 1.2rem;
+    width: 15rem;
   }
   
 }
